<resources>
    <string name="app_name">Final Project</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="go_to_tg_news">Search The Guardian</string>
    <string name="tg_btn_search">Search</string>
    <string name="tg_toast_no_term">Please, enter search term</string>
    <string name="tg_toast_many_terms">Please, enter only one term</string>
    <string name="tg_snack_starred">News saved</string>
    <string name="tg_snack_undo_btn">Undo</string>
    <string name="tg_snack_star_remov">Star removed</string>
    <string name="tg_frag_section">Section</string>
    <string name="tg_frag_btn_hide">Hide</string>
    <string name="tg_navbar_header1"> The Guardian news article search</string>
    <string name="tg_navbar_header2">Author: Lilia Ramalho Martins</string>
    <string name="tg_navbar_header3">Version: 1.0</string>
    <string name="tg_navbar_item1">Saved News</string>
    <string name="tg_navbar_item2">Help</string>
    <string name="tg_navbar_item3">Go to BBC News</string>
    <string name="tg_navbar_item4">Go to Nasa Images</string>
    <string name="tg_navbar_item5">Go to Satellite Images</string>
    <string name="tg_st_news_activity_title">Starred News</string>
    <string name="tg_remov_dialog_title">Remove this News from Starred?</string>
    <string name="tg_remov_dialog_yes">Yes</string>
    <string name="tg_remov_dialog_cancel">Cancel</string>
    <string name="tg_help_dialog_dismiss">Close</string>
    <string name="tg_help_dialog_title">Help</string>
    <string name="tg_help_dialog_line1">- Type a term to search News in The Guardian.</string>
    <string name="tg_help_dialog_line2">- Click News title to see its details.</string>
    <string name="tg_help_dialog_line3">- Click star icon near News to save it.</string>
    <string name="tg_help_dialog_line4">- Click star icon on top to see the list of saved News.</string>
    <string name="title">Look at my GUI</string>

    <string name="btn">CLICK HERE</string>

    <string name="ckbox">Check this out!</string>

    <string name="flagdescription">CA Flag</string>

    <string name="swit">Switch on / off</string>

    <string name="prompt">Type here</string>

    <string name="hello_message">Hello World!</string>

    <string name="ButtonText">I\'m a button!</string>

    <string name="toast_message">Here is more information</string>

    <string name="off">The switch is now off</string>

    <string name="on">The switch is now on</string>

    <string name="undo">UNDO</string>

    <!--lab 3 below-->


    <string name="To_enter">Enter your email address:</string>

    <string name="Type_email">Type email here</string>

    <string name="To_enter_pass">Type your password:</string>

    <string name="Login">LOGIN</string>

    <string name="profile">Your profile</string>

    <string name="yourname">Your name:</string>

    <string name="name_hint">Enter your name</string>

    <string name="youremail">Your email:</string>

    <string name="email_hint">Enter your email</string>

    <string name="yourpicture">Your picture:</string>

    <string name="pictureprompt">Click the button above to take a picture</string>

    <string name="gotochat">Go to chat</string>

    <string name="send">SEND</string>

    <string name="typehere">type here</string>

    <string name="receive">RECEIVE</string>

    <string name="delete">Delete</string>

    <string name="ask">Do you want to delete this</string>

    <!-- TODO: Remove or change this placeholder text -->


    <string name="MessageHere">Message Here</string>

    <string name="ID">ID=</string>

    <string name="Send">is a send message</string>

    <string name="hidebtn">Hide</string>

    <string name="app_namee">FinalProject</string>

    <string name="gotoImage">Get Image Data</string>

    <string name="earthSearch">Enter Longitude and Latitude</string>

    <string name="latitudeText">Latitude:</string>

    <string name="latitudeEdit">Enter Latitude here</string>

    <string name="lonText">Longitude:</string>

    <string name="lonEdit">Enter Longitude here</string>

    <string name="date">Date: </string>

    <string name="favImage">My List</string>

    <string name="saveImage">Save to My List</string>

    <string name="listView">ListView not working</string>

    <string name="help">Help</string>



    <string name="bbc_tv1">BBC News</string>
    <string name="bbc_et1">Type key word to search</string>
    <string name="bbc_bt1">Search</string>
    <string name="bbc_bt2">Go to favorite list</string>
    <string name="bbc_tv5">The Guardian news article search</string>
    <string name="bbc_bt4">News list</string>
    <string name="bbc_bt_help">Help</string>
    <string name="header_title">BBC News</string>
    <string name="header_author">Yun Zhu</string>
    <string name="header_version">V1.2</string>
    <string name="help_title">Help page</string>
    <string name="help_content">1.Click "go to favorite" button or menu, go to favarite page. \n
                                2.Click "News list" button or menu, go to news list. \n
                                3.Click news item, show news detailed information.</string>
    <string name="help_yes">Yes</string>
    <string name="help_no">No</string>
    <string name="snackbar">Start downloading!!!!</string>

    <string name="fav_alert_title">Notice</string>
    <string name="fav_alert_message">You are going back to the news list!</string>
    <string name="fav_alert_close">Close</string>
    <string name="fav_snack">Processing...</string>
    <string name="fav_toast">Going to news list...</string>

    <string name="main_toast">Going to favourite list...</string>

    <string name="fav_delete">Do you want to delete this news?</string>
    <string name="fav_yes">Yes</string>
    <string name="fav_no">No</string>

    <string name="save_button">Save</string>

    <string name="item3">NASA earth imagery database</string>
    <string name="item4">NASA image of the day search</string>

    <string name="toast_db_save">Save successfully</string>

    <string name="button2">NASA image of the day search</string>

    <!--nasaimage_of_day_search-->
    <string name="textView1">Please pick a date</string>
    <string name="buttonSeaerch">Search</string>

    <!--nasaimage_info-->
    <string name="textView2">Information about NASA Image Of Day, click hdurl to view the image</string>
    <string name="buttonGoBack">Go Back</string>
    <string name="buttonList">Go To ImageList</string>
    <string name="buttonHelp">HELP</string>
    <string name="helpTitle">Help</string>
    <string name="description">This application allows user to pick a date to retrieve an image from NASA web servers. Click the text field to choose a date, then press the search button retrieve and image.</string>
    <string name="ok">OK</string>

    <!--nasaimage_list-->
    <string name="textView3">Image List</string>

    <string name="hideButton">HIDE</string>

    <string name="snackbar1">You are viewing NASA_IMAGE_OF_DAY list, click one to view the image</string>
    <string name="titleMessage">Do you want to delete this?</string>
    <string name="deleteMessage">Confirm deletion?</string>
    <string name="yes">YES</string>
    <string name="no">CANCEL</string>


</resources>
