<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/gr">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/button31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn"
            android:layout_gravity="fill"
            android:layout_weight="1"
            android:onClick="@string/toast_message"/>

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ckbox"
            android:layout_weight="1"
            android:layout_gravity="fill"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000"
            app:srcCompat="@drawable/flag"
            android:contentDescription="@string/flagdescription"
            android:layout_gravity="fill"
            android:layout_weight="1"/>
        <Switch
            android:id="@+id/switch11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/swit"
            android:layout_gravity="fill"
            android:layout_weight="1"/>
    </LinearLayout>

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt"
            android:inputType="textPersonName|textCapWords" />

</LinearLayout>