<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View android:id="@+id/trueCentre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toStartOf="@id/trueCentre"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/btn" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="37dp"
        android:layout_toEndOf="@id/trueCentre"
        android:text="@string/ckbox" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:layout_below="@id/button2"
        android:contentDescription="@string/flagdescription"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/trueCentre"
        app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="193dp"
        android:layout_height="47dp"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/trueCentre"
        android:text="@string/swit" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentStart="true"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/prompt"
        android:inputType="textPersonName|textCapWords" />
</RelativeLayout>
