<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NasaDB">

    <!--TextView
        android:id="@+id/searchTitle"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earthSearch" />

    <EditText
        android:id="@+id/longEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lonEdit" />

    <EditText
        android:id="@+id/latEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitudeEdit" />


    <Button
        android:id="@+id/earthImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotoImage" /-->

    <ImageView
        android:id="@+id/nasaImage"
        android:layout_width="113dp"
        android:layout_height="111dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/lonText" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/latitudeText" />

    <TextView
        android:id="@+id/imageDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/date" />



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveImage" />

        <Button
            android:id="@+id/favoriteImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/save"
            android:text="@string/favImage" />

        <Button
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/favoriteImage"
            android:text="@string/help" />

        <ProgressBar
            android:id="@+id/loadingProgress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/help"
            style="?android:attr/progressBarStyleHorizontal" />

    </RelativeLayout>



</LinearLayout>