<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NASAImageInfoZhe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagePreview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView2"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text=""
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/hdurl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text=""
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonGoBack"
            />

        <Button
            android:id="@+id/saveImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveImage" />

        <Button
            android:id="@+id/buttonList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonList" />

        <Button
            android:id="@+id/buttonHelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonHelp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>